# atros

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: audit.yml  check.yml
examples/: 01-hello-world.ts  02-system-specific-tasks.ts  03-define-parameters-for-packages.ts
src/: args.rs  cache.rs  initialize.rs  lib.rs  main.rs  system_pacman.rs
src/executor/: get.rs  mod.rs
src/step/: mod.rs  run.rs  run_install.rs  run_shell.rs  tools.rs
src/step/types/: general.rs  install.rs  mod.rs  shell.rs
