[package]
name = "atros"
version = "0.1.0"
authors = ["Cugatay cagataykaydir@gmail.com"]
edition = "2021"
license = "MIT"
description = "Automation for the Rest of Us"
repository = "https://github.com/kodkafa/atros"
readme = "README.md"

[[bin]]
name = "atros"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
